using UnityEngine;

public class EnemyObject : CellObject
{
    public int Health = 3;

    private int m_CurrentHealth;
    private Animator m_Animator;

    private void Awake()
    {
        m_Animator = GetComponent<Animator>();
        GameManager.Instance.TurnManager.OnTick += TurnHappened;
    }

    private void OnDestroy()
    {
        GameManager.Instance.TurnManager.OnTick -= TurnHappened;
    }

    public override void Init(Vector2Int coord)
    {
        base.Init(coord);
        m_CurrentHealth = Health;
    }

    public override bool PlayerWantsToEnter()
    {
        m_CurrentHealth -= 1;

        if (m_CurrentHealth <= 0)
        {
            Destroy(gameObject);
        }

        return false;
    }

    bool MoveTo(Vector2Int coord)
    {
        var board = GameManager.Instance.BoardManager;
        var targetCell = board.GetCellData(coord);

        if (targetCell == null
            || !targetCell.Passable
            || targetCell.ContainedObject != null)
        {
            return false;
        }

        var currentCell = board.GetCellData(m_Cell);
        currentCell.ContainedObject = null;

        targetCell.ContainedObject = this;
        m_Cell = coord;
        transform.position = board.CellToWorld(coord);

        return true;
    }

    void TurnHappened()
    {
        var playerCell = GameManager.Instance.PlayerController.CurrentCell;

        int xDist = playerCell.x - m_Cell.x;
        int yDist = playerCell.y - m_Cell.y;

        int absXDist = Mathf.Abs(xDist);
        int absYDist = Mathf.Abs(yDist);

        if ((xDist == 0 && absYDist == 1)
            || (yDist == 0 && absXDist == 1))
        {
            GameManager.Instance.ChangeFood(-3);

            m_Animator.SetBool("Moving", false);
            m_Animator.SetTrigger("Attack");
            PlayerController.Animator.SetTrigger("Damage");
        }
        else
        {
            bool moved = false;

            if (absXDist > absYDist)
            {
                moved = TryMoveInX(xDist);
                if (!moved) moved = TryMoveInY(yDist);
            }
            else
            {
                moved = TryMoveInY(yDist);
                if (!moved) moved = TryMoveInX(xDist);
            }

            m_Animator.SetBool("Moving", moved);
        }
    }

    bool TryMoveInX(int xDist)
    {
        // try to get closer in x

        // player to our right
        if (xDist > 0)
        {
            return MoveTo(m_Cell + Vector2Int.right);
        }

        // player to our left
        return MoveTo(m_Cell + Vector2Int.left);
    }

    bool TryMoveInY(int yDist)
    {
        // try to get closer in y

        // player on top
        if (yDist > 0)
        {
            return MoveTo(m_Cell + Vector2Int.up);
        }

        // player below
        return MoveTo(m_Cell + Vector2Int.down);
    }
}
